<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Elige"
    android:orientation="vertical">

    <TextView
        android:text="@string/elige" android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:id="@+id/txt"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_vertical|center_horizontal" />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_gravity="center_horizontal"
        android:id="@+id/radioG">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/alg2"
            android:id="@+id/r2"
            android:layout_gravity="center"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/alg3"
            android:id="@+id/r3"
            android:layout_gravity="center"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/alg4"
            android:id="@+id/r4"
            android:layout_gravity="center"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/alg5"
            android:id="@+id/r5"
            android:layout_gravity="center"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/alg6"
            android:id="@+id/r6"
            android:layout_gravity="center"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/alg7"
            android:id="@+id/r7"
            android:layout_gravity="center"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/cont"
        android:id="@+id/buttonCont" />

</LinearLayout>
